<resources>
    <string name="app_name">AES Camera</string>

    <string name="enter_encryption_key_title">Key for Encryption</string>
    <string name="enter_encryption_key">Enter key</string>
    <string name="show_key">Show key</string>

    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="lock">Lock</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="add_to_vault">Add to Vault</string>
    <string name="share_whatsapp">Share on WhatsApp</string>

    <string name="files_list_title">Files</string>
    <string name="selected_count">%1$d Selected</string>

    <string name="decrypted_image_viewer_title">Decrypted Image</string>
    <string name="error_no_file_selected">Error: No file selected</string>
    <string name="enter_key_message">Enter key to decrypt image</string>
    <string name="file_open_failed_message">Unable to open file!</string>
    <string name="image_decryption_failed_message">Failed to decrypt image!</string>
    <string name="image_decode_failed_message">Failed to decode image!</string>
    <string name="file_added_to_vault_message">File added to vault</string>

    <string name="fa_solid">solid</string>
    <string name="fa_camera">f030</string>
    <string name="fa_camera_rotate">e0d8</string>
    <string name="fa_chevron_left">f053</string>
    <string name="fa_chevron_right">f054</string>
    <string name="fa_folder_open">f07c</string>
    <string name="fa_file">f15b</string>
    <string name="fa_file_image">f1c5</string>
    <string name="fa_file_video">f1c8</string>
    <string name="fa_key">f084</string>
    <string name="fa_lock">f023</string>
    <string name="fa_light_bulb">f0eb</string>
</resources>