<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_share_whatsapp"
        android:icon="@drawable/ic_whatsapp"
        android:title="@string/share_whatsapp"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_check_double"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_lock"
        android:title="@string/lock"
        app:showAsAction="ifRoom" />
</menu>