<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewer.DecryptedImageViewerActivity">

    <com.otaliastudios.zoom.ZoomImageView
        android:id="@+id/decryptedImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:scrollbars="vertical|horizontal"
        app:alignment="center"
        app:animationDuration="280"
        app:flingEnabled="true"
        app:horizontalPanEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxZoom="2.5"
        app:maxZoomType="zoom"
        app:minZoom="0.7"
        app:minZoomType="zoom"
        app:oneFingerScrollEnabled="true"
        app:overPinchable="true"
        app:overScrollHorizontal="true"
        app:overScrollVertical="true"
        app:scrollEnabled="true"
        app:threeFingersScrollEnabled="true"
        app:transformation="centerInside"
        app:transformationGravity="auto"
        app:twoFingersScrollEnabled="true"
        app:verticalPanEnabled="true"
        app:zoomEnabled="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/decryptedImageViewError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.devil7softwares.aescamera.views.FontAwesomeButton
        android:id="@+id/decryptedImageViewResetKey"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:padding="0dp"
        android:textSize="30sp"
        android:visibility="gone"
        app:faIcon="@string/fa_key"
        app:faStyle="@string/fa_solid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decryptedImageViewError" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/decryptedImageViewProgress"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorSize="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackThickness="6dp" />

    <com.devil7softwares.aescamera.views.FontAwesomeButton
        android:id="@+id/decryptedImageViewPrevious"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:faIcon="@string/fa_chevron_left"
        app:faStyle="solid"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.devil7softwares.aescamera.views.FontAwesomeButton
        android:id="@+id/decryptedImageViewNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="gone"
        app:faIcon="@string/fa_chevron_right"
        app:faStyle="solid"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>